kube.service.yml

apiVersion: v1
kind: Service
metadata:
  name: purchase-gateway-web
  namespace: purchase-gateway
  labels:
    component: purchase-gateway-web
spec:
  selector:
    app: purchase-gateway-web
  ports:
    - protocol: TCP
      port: 8108
      name: "api-http"
      targetPort: 80
  type: LoadBalancer
